# automatic_passing_of_test_rust

./: Cargo.toml  README.md  index.html  integrate.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.rs  main.tsx  passing.rs  preparing.rs  utils.rs
src-tauri/: Cargo.toml  run.sh  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  passing.rs  preparing.rs  web_driver.rs
src/assets/styles/: main.scss
src/components/: index.tsx  style.scss
src/components/app/: index.tsx  style.scss
