[package]
name = "automatic_passing_of_test"
version = "0.1.0"
description = "A Tauri App"
authors = ["yasharusakov"]
license = "Apache-2.0 license"
repository = "https://github.com/yasharusakov/automatic_passing_of_test_rust"
default-run = "automatic_passing_of_test"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
thirtyfour = "0.31.0"
tokio = "1.32.0"
webbrowser = "0.8.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
